# vitruvian-quant-paper-agent

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: papers.py
app/core/: celery_app.py  config.py
app/db/: qdrant.py
app/parsers/: pdf_parser.py
app/rag/: chunker.py  embedder.py  rag_pipeline.py  retriever.py
app/services/: llm.py
app/tasks/: paper_tasks.py
app/workflows/: ingest_pipeline.py  paper_orkflo.py
tests/: test_ingest.py  test_parser.py  test_rag.py  test_retrieval.py
