[project]
name = "vitruvian-quant-paper-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "docling>=2.94.0",
    "fastapi>=0.136.1",
    "instructor>=1.15.1",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "litellm>=1.85.0",
    "neo4j>=6.2.0",
    "numpy>=2.4.5",
    "openai>=2.37.0",
    "orjson>=3.11.9",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "rich>=14.3.4",
    "sentence-transformers>=5.5.0",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "typer>=0.21.2",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
